--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,12 @@ testem.log
 # System files
 .DS_Store
 Thumbs.db
+
+# Environment files
+src/environments/environment.ts
+src/environments/environment.prod.ts
+src/environments/environment.*.ts
+.env
+.env.local
+.env.production
+.env.staging
